BE,FE : Completed all, ready semhas
